syntax = "proto3";

package comment;

service CommentService {
    rpc deleteCommentsByThreadId(deleteCommentsByThreadIdArgs) returns(ActionComplete) {}
}

message deleteCommentsByThreadIdArgs {
    string thread_id = 1;
}

message ActionComplete {
    bool success = 1;
    string message = 2;
}

